<resources>
    <string name="app_name">Sustainability Coach</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_home">Sustainability Coach</string>
    <string name="title_home">Home</string>
    <string name="title_habits">Habits</string>
    <string name="title_impact">Impact</string>
    <string name="title_profile">Profile</string>
    <string name="error_not_available">Sorry, this is not yet available</string>
    <string name="start_button">Create habit</string>
    <string name="title_explore">Explore habits</string>
    <string name="explore_category_text">Select the area you want to be more sustainable in</string>
    <string name="explore_difficulty_text">Do you want to start easy or take on a real challenge?</string>
    <string name="explore_button_next">Next</string>
    <string name="nav_header_subtitle">EIT HCID Project</string>
    <string name="nav_header_title">Sustainability Coach</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_start_new">Start (new user)</string>
    <string name="menu_plan_habit">Plan habit</string>
    <string name="menu_start_planned">Start (with planned habit)</string>
    <string name="menu_start_fill_dayone">Start (fill day one)</string>
    <string name="menu_start_fill_daytwo">Start (fill day two)</string>
    <string name="menu_start_after_twoweeks">Start (after two weeks)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_difficult">Difficult</string>
    <string name="category_consumption">Consumption</string>
    <string name="category_food">Food</string>
    <string name="category_household">Household</string>
    <string name="category_transportation">Transportation</string>
    <string name="explore_button_skip">Skip</string>
    <string name="plan_title">Plan habit</string>
    <string name="plan_level_title_meat">How often do you want to stop eating meat per week?</string>
    <string name="plan_notification_title">When do you want your coach to remind you?</string>
    <string name="plan_activate_button">Activate the coach!</string>
    <string name="plan_success_title">Coach is activated!</string>
    <string name="fill_results">Fill Results</string>
    <string name="achieved">Achieved?</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plan_schedule_per_week">time(s) per week</string>
    <string name="learn_coach_text">Learn more about the coach</string>
    <string name="coach_info_title">Learn about the coach</string>
    <string name="notification_tips">We recommend that you as many days as you planned before, and try to stick to this
        schedule per week to make it easier for you. However, if you don\'t know yet you can also select more days just
        to get a reminder.
    </string>
    <string name="coach_info_explanation">Our coach is an intelligent system which helps you in implementing new habits.
        You tell the coach what you want to achieve and the coach will give you information about the habits, tips,
        reminders, and motivate you through your impact and statistics.
    </string>
    <string name="notification_tips">We recommend that you as many days as you planned before, and try to stick to this schedule per week to make it easier for you. However, if you don\'t know yet you can also select more days just to get a reminder.</string>
    <string name="coach_info_explanation">Our coach is an intelligent system which helps you in implementing new habits. You tell the coach what you want to achieve and the coach will give you information about the habits, tips, reminders, and motivate you through your impact and statistics.</string>
    <string name="less_meat_habit_detail_text">
        Avoiding meat and dairy products is the single biggest way to reduce your environmental impact on the planet, according to the scientists behind the most comprehensive analysis to date of the damage farming does to the planet.
        The new analysis shows that while meat and dairy provide just 18% of calories and 37% of protein, it uses the vast majority – 83% – of farmland and produces 60% of agriculture’s greenhouse gas emissions. Other recent research shows 86% of all land mammals are now livestock or humans. The scientists also found that even the very lowest impact meat and dairy products still cause much more environmental harm than the least sustainable vegetable and cereal growing.
    </string>
</resources>
