<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/plan_notification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".plan.ui.PlanNotificationFragment">

    <TextView
        android:id="@+id/message"
        style="@style/AppTheme.ViewHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/plan_notification_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/notification_days_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@id/notification_days_button_group2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_notification_monday"
            style="@style/AppTheme.CompactMultiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_notification_tuesday"
            style="@style/AppTheme.CompactMultiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tue" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_notification_wednesday"
            style="@style/AppTheme.CompactMultiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wed"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/notification_days_button_group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_days_button_group">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_notification_thursday"
            style="@style/AppTheme.CompactMultiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thu"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_notification_friday"
            style="@style/AppTheme.CompactMultiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fri"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_notification_saturday"
            style="@style/AppTheme.CompactMultiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sat"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_notification_sunday"
            style="@style/AppTheme.CompactMultiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sun"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/notification_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textStyle="italic"
        android:text="@string/notification_tips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_days_button_group2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activate_button"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/plan_activate_button"
        android:textSize="18sp"
        android:backgroundTint="@color/colorAccent"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_tips" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/learn_coach_button"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:text="@string/learn_coach_text"
        android:textSize="14sp"
        android:paddingRight="32dp"
        android:paddingLeft="32dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
